--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html>
     <head>
         <title>Portfolio Yholas</title>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </head>
 <body>
 
 <h1>Mon projet ScroringEloMulti</h1>
-<p>My first paragraph.</p>
-
+<main> 
+<div class="container">
+    <p>nombre de joueurs :</p>
+    <input type="number" id = "NombreDeJoueurs">
+    <button type="submit" class="btn btn-primary">Valider</button>
+        
+    </button>
+</div>    
+ </main>
+<footer> 
+    Design par Yholas 
+</footer>
 </body>
 </html>
