--- a/index.html
+++ b/index.html
@@ -5,21 +5,95 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="javascript.js"></script>
+        <link rel="stylesheet" type="text/css" href="/styles.css" >
     </head>
 <body>
 
-<h1>Mon projet ScroringEloMulti</h1>
-<main> 
-<div class="container">
-    <p>nombre de joueurs :</p>
-    <input type="number" id = "NombreDeJoueurs">
-    <button type="submit" class="btn btn-primary">Valider</button>
-        
-    </button>
-</div>    
- </main>
-<footer> 
-    Design par Yholas 
-</footer>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Eleventh navbar example">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">MonScoreEloMulti</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div class="collapse navbar-collapse" id="navbarsExample09">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Acceuil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./index.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      
+<div class="main" ></div>
+    <div class="container" id="mes-Projets">
+        <h2> Mes Projets</h2>
+        <h3> EloScoreMulti</h3>
+        <div class="container" id="EloScoreMulti">
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col"> Table #</th>
+                    <th scope="col">Joueur 1</th>
+                    <th scope="col">Joueur 2</th>
+                    <th scope="col">Joueur 3</th>
+                    <th scope="col">Joueur 4</th>
+                </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td Class ="joueur" id="Joueur1Table1">Alex</td>
+                    <td Class ="joueur" id="Joueur2Table1">Bruce</td>
+                    <td Class ="joueur" id="Joueur3Table1">Charlie</td>
+                    <td Class ="joueur" id="Joueur4Table1">Danny</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Ernest</td>
+                    <td>Franck</td>
+                    <td>Hector</td>
+                    <td>India</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Juliet</td>
+                    <td>Kilo</td>
+                    <td>Lima</td>
+                    <td>Mike</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>Novembre</td>
+                    <td>Oscar</td>
+                    <td>Papa</td>
+                    <td>Quebec</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+    </div>
+    <div class="container" id="Mon-CV">
+        <h2> CV</h2>
+        <p>Bonbon bonbon lemon drops icing jelly beans toffee oat cake cake gummi bears. Tart sweet soufflé muffin sesame snaps croissant croissant powder shortbread. Sugar plum lollipop cupcake wafer danish pudding gummies sweet roll wafer.
+
+            Jujubes biscuit sesame snaps tiramisu tootsie roll fruitcake cupcake. Chocolate cake cookie gummi bears tiramisu bonbon dessert icing. Chupa chups jujubes brownie brownie chupa chups. Lemon drops halvah jujubes cake jujubes chocolate.</p>
+    </div>
+    <div class="container" id="future-acquisition">
+        <h2>Future acquisition</h2>
+        <p> Tootsie roll toffee cotton candy candy powder chocolate cake icing dessert halvah. Cheesecake jelly-o danish carrot cake cotton candy jelly chocolate jelly beans. Jelly-o danish pudding apple pie candy. Chocolate bar bear claw cake liquorice pastry gummi bears marzipan ice cream. Carrot cake liquorice tiramisu jujubes powder chocolate bar bear claw. Jelly-o sugar plum chupa chups ice cream candy. Marshmallow danish bear claw cake icing lollipop chocolate cotton candy jelly-o.</p>
+    </div>
+
+<div class="footer"> 
+    <div class="container">Design par Yholas <a href="contact.html"> Contact</a> </div>
+</div>
 </body>
 </html>
